--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,9 @@
 .custom-header {
     background-color: #e2dc86;
+    display: flex;
+    flex: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header {
